# qcaptions

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.toml  pyproject.toml
scripts/: validate.py
src/qcaptions/: __init__.py  assgen.py  burn.py  cli.py  corrections.py  default_corrections.toml  doctor.py  grouping.py  intro.py  paths.py  transcribe.py
tests/: test_pipeline.py
